day4/istio-demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fortuneappsvc
spec:
  selector:
    app: fortune-app
  ports:
  - port: 80
    targetPort: 3000
    name: http
