day4/istio-demo/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway

metadata:
  name: fortune-gateway

spec:
  selector:
    istio: ingressgateway
  servers:
  - port: 
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - fapp.139.59.222.180.nip.io
