day4/istio-demo/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3

kind: VirtualService

metadata:
  name: fortune-vs

spec:
  hosts:
  - "*"
  gateways:
  - fortune-gateway

  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: fortuneappsvc
        port:
          number: 80
    rewrite:
      uri: /
  - match:
    - uri:
        exact: /v1
    route:
    - destination:
        host: fortuneappsvc
        port:
          number: 80
    rewrite:
      uri: /
